# range

./: .gitignore  CMakeLists.txt  README.md  devlog.txt
engine/: CMakeLists.txt
engine/engine/: canvas.c  canvas.h  component_list.c  component_list.h  engine.c  engine.h  lights.c  lights.h  mesh_base.c  mesh_base.h  mesh_instance.c  mesh_instance.h  models.c  models.h  scene.c  scene.h  strides.h  window.c
engine/engine/common/: CMakeLists.txt  colour.h  status.h
engine/engine/core/: CMakeLists.txt  canvas.c  canvas.h  components.h  engine.c  engine.h  globals.h  lights.c  lights.h  mesh_base.c  mesh_base.h  mesh_instance.c  mesh_instance.h  models.c  models.h  resources.h  scene.c  scene.h  strides.c  strides.h  transform.h  window.c  window.h
engine/engine/maths/: CMakeLists.txt  bounding_sphere.h  matrix4.c  matrix4.h  plane.c  plane.h  utils.h  vector2.h  vector3.h  vector4.h  vector_maths.h
engine/engine/physics/: CMakeLists.txt  collision.c  collision.h  physics.c  physics.h  physics_frame.h
engine/engine/renderer/: CMakeLists.txt  camera.c  camera.h  depth_buffer.c  depth_buffer.h  draw_2d.c  draw_2d.h  frame_data.c  frame_data.h  frustum_culling.c  frustum_culling.h  render.c  render.h  render_buffers.h  render_settings.h  render_target.h  renderer.c  renderer.h  texture.c  texture.h
engine/engine/scripts/: CMakeLists.txt
engine/engine/scripts/gameplay/: CMakeLists.txt  player_controller.h
engine/engine/scripts/rendering/: CMakeLists.txt  billboard.c  billboard.h
engine/engine/ui/: CMakeLists.txt  font.c  font.h  text.c  text.h  ui.c  ui.h
engine/engine/utils/: CMakeLists.txt  common.h  logger.h  memory_utils.c  memory_utils.h  str_utils.c  str_utils.h  timer.h  vector.c  vector.h
game/: CMakeLists.txt  main.c
range/: CMakeLists.txt  main.c
tools/lightmaptool/: CMakeLists.txt  light_mapping.c  light_mapping.h  main.c
